# todoapp-backend

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  models.py  schemas.py
src/routers/: notes.py  users.py
